// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`removes aria-label when instructed not to announce the space name 1`] = `
<SpaceAvatarInternal
  announceSpaceName={false}
  space={
    Object {
      "id": "",
      "name": "",
    }
  }
>
  <EuiAvatar
    aria-hidden={true}
    aria-label=""
    color="#DA8B45"
    data-test-subj="space-avatar-"
    initials=""
    initialsLength={2}
    name=""
    size="m"
    type="space"
  >
    <div
      aria-hidden={true}
      aria-label=""
      className="euiAvatar euiAvatar--m euiAvatar--space"
      data-test-subj="space-avatar-"
      role="img"
      style={
        Object {
          "backgroundColor": "#DA8B45",
          "color": "#000000",
        }
      }
      title=""
    >
      <span
        aria-hidden="true"
      />
    </div>
  </EuiAvatar>
</SpaceAvatarInternal>
`;

exports[`renders with a space name entirely made of whitespace 1`] = `
<EuiAvatar
  color="#D36086"
  data-test-subj="space-avatar-"
  initials=""
  initialsLength={2}
  name=""
  size="m"
  type="space"
/>
`;

exports[`renders without crashing 1`] = `
<EuiAvatar
  color="#DA8B45"
  data-test-subj="space-avatar-"
  initials=""
  initialsLength={2}
  name=""
  size="m"
  type="space"
/>
`;
